Porting to ClojureCPP - first working pass with all tests passing.