@@ -6,7 +6,7 @@
 ;;   the terms of this license.
 ;;   You must not remove this notice, or any other, from this software.
 
-(defproject uncomplicate/clojurecuda "0.17.0"
+(defproject uncomplicate/clojurecuda "0.18.0-SNAPSHOT"
   :description "ClojureCUDA is a Clojure library for parallel computations with Nvidia's CUDA."
   :url "https://github.com/uncomplicate/clojurecuda"
   :scm {:name "git"
@@ -14,10 +14,11 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.11.1"]
-                 [org.jcuda/jcuda "11.8.0"]
                  [org.clojure/core.async "1.6.673"]
-                 [uncomplicate/commons "0.13.1"]
-                 [uncomplicate/fluokitten "0.9.1"]]
+                 [uncomplicate/commons "0.14.0-SNAPSHOT"]
+                 [uncomplicate/fluokitten "0.9.1"]
+                 [org.uncomplicate/clojure-cpp "0.2.0-SNAPSHOT"]
+                 [org.bytedeco/cuda-platform "12.1-8.9-1.5.9"]]
 
   :codox {:metadata {:doc/format :markdown}
           :src-dir-uri "http://github.com/uncomplicate/clojurecuda/blob/master/"
@@ -36,10 +37,10 @@
                                  *assert* true
                                  *unchecked-math* :warn-on-boxed
                                  *print-length* 128}
-                   :dependencies [[midje "1.10.9"]]
-                   :jvm-opts ^:replace ["--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"
-                                        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"]}}
-
+                   :dependencies [[midje "1.10.9"]
+                                  [org.bytedeco/cuda-platform-redist "12.1-8.9-1.5.9"]]
+                   :jvm-opts ^:replace ["-Djavacpp.platform=linux-x86_64"]}}
+  :repositories [["snapshots" "https://oss.sonatype.org/content/repositories/snapshots"]]
   :javac-options ["-target" "1.8" "-source" "1.8" "-Xlint:-options"]
   :source-paths ["src/clojure" "src/cuda"]
   :test-paths ["test/clojure" "test/cuda"]
